Initialize NetworkChangeNotifier after TaskScheduler in service process.

The NetworkChangeNotifier must be created after TaskScheduler because it
posts tasks to it.

Bug: 789442
Change-Id: Ie6066064a5f840666160bac76d95ad16d3363708
Reviewed-on: https://chromium-review.googlesource.com/810925
Reviewed-by: Vitaly Buka <vitalybuka@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522262}
Former-commit-id: 1d7a91284b1ea021daaeeea39c8f6a242782f670